[Payments] Only record aborts for nav. in main frame for PR.

Bug: 776474
Change-Id: Ibe8ffc41afbafdf645dc7d970bfc4632ce03e04a