components/payments/content/payment_request.cc
@@ -289,7 +289,8 @@ void PaymentRequest::UserCancelled() {
   manager_->DestroyRequest(this);
 }
 
-void PaymentRequest::DidStartNavigation(bool is_user_initiated) {
+void PaymentRequest::DidStartMainFrameNavigationToDifferentDocument(
+    bool is_user_initiated) {
   RecordFirstAbortReason(is_user_initiated
                              ? JourneyLogger::ABORT_REASON_USER_NAVIGATION
                              : JourneyLogger::ABORT_REASON_MERCHANT_NAVIGATION);
