components/payments/content/payment_request_web_contents_manager.cc
@@ -42,6 +42,12 @@ void PaymentRequestWebContentsManager::CreatePaymentRequest(
 
 void PaymentRequestWebContentsManager::DidStartNavigation(
     content::NavigationHandle* navigation_handle) {
+  // Navigations that are not in the main frame (e.g. iframe) or that are in the
+  // same document do not close the Payment Request. Disregard those.
+  if (!navigation_handle->IsInMainFrame() ||
+      navigation_handle->IsSameDocument()) {
+    return;
+  }
   for (auto& it : payment_requests_) {
     // Since the PaymentRequest dialog blocks the content of the page, the user
     // cannot click on a link to navigate away. Therefore, if the navigation
